homepage footer stops covering content

--- a/src/App.css
+++ b/src/App.css
@@ -3,3 +3,7 @@ body {
   display: flex;
   flex-direction: column;
 }
+
+Footer {
+  flex-grow: 1;
+}
